Bug#29752 Linefeeds break LOAD XML INFILE Problem: Linefeed, newline and tab characters where not considered as separators. Only space character worked as separator. Fix: convert linefeed, newline and tab characters to space when loading the next character from the input stream. This is safe, because these characters are equal from the point of view of XML.