sql/sql_load.cc
@@ -1549,6 +1549,23 @@ my_xml_entity_to_char(const char *name, uint length)
 }
 
 
+/**
+  @brief Convert newline, linefeed, tab to space
+  
+  @param chr    character
+  
+  @details According to the "XML 1.0" standard,
+           only space (#x20) characters, carriage returns,
+           line feeds or tabs are considered as spaces.
+           Convert all of them to space (#x20) for parsing simplicity.
+*/
+static int
+my_tospace(int chr)
+{
+  return (chr == '\t' || chr == '\r' || chr == '\n') ? ' ' : chr;
+}
+
+
 /*
   Read an xml value: handle multibyte and xml escape
 */
@@ -1557,7 +1574,7 @@ int READ_INFO::read_value(int delim, String *val)
   int chr;
   String tmp;
 
-  for (chr= GET; chr != delim && chr != my_b_EOF; )
+  for (chr= my_tospace(GET); chr != delim && chr != my_b_EOF; )
   {
 #ifdef USE_MB
     if (my_mbcharlen(read_charset, chr) > 1)
@@ -1567,18 +1584,20 @@ int READ_INFO::read_value(int delim, String *val)
       for (i= 1; i < ml; i++) 
       {
         val->append(chr);
-        chr= GET;
+        /*
+          Don't use my_tospace() in the middle of a multi-byte character
+          TODO: check that the multi-byte sequence is valid.
+        */
+        chr= GET; 
         if (chr == my_b_EOF)
           return chr;
       }
     }
 #endif
-    if(my_isspace(read_charset, chr)) /* convert newline, tab etc to space */
-      val->append(' ');
-    else if(chr == '&')
+    if(chr == '&')
     {
       tmp.length(0);
-      for (chr= GET ; chr != ';' ; chr= GET)
+      for (chr= my_tospace(GET) ; chr != ';' ; chr= my_tospace(GET))
       {
         if (chr == my_b_EOF)
           return chr;
@@ -1595,7 +1614,7 @@ int READ_INFO::read_value(int delim, String *val)
     }
     else
       val->append(chr);
-    chr= GET; 
+    chr= my_tospace(GET);
   }            
   return chr;
 }
@@ -1618,12 +1637,12 @@ int READ_INFO::read_xml()
   attribute.length(0);
   value.length(0);
   
-  for (chr= GET; chr != my_b_EOF ; )
+  for (chr= my_tospace(GET); chr != my_b_EOF ; )
   {
     switch(chr){
     case '<':  /* read tag */
         /* TODO: check if this is a comment <!-- comment -->  */
-      chr= GET;
+      chr= my_tospace(GET);
       if(chr == '!')
       {
         chr2= GET;
@@ -1633,7 +1652,7 @@ int READ_INFO::read_xml()
         {
           chr2= 0;
           chr3= 0;
-          chr= GET;
+          chr= my_tospace(GET);
           
           while(chr != '>' || chr2 != '-' || chr3 != '-')
           {
@@ -1647,7 +1666,7 @@ int READ_INFO::read_xml()
               chr2= 0;
               chr3= 0;
             }
-            chr= GET;
+            chr= my_tospace(GET);
             if (chr == my_b_EOF)
               goto found_eof;
           }
@@ -1660,7 +1679,7 @@ int READ_INFO::read_xml()
       {
         if(chr != delim) /* fix for the '<field name =' format */
           tag.append(chr);
-        chr= GET;
+        chr= my_tospace(GET);
       }
       
       // row tag should be in ROWS IDENTIFIED BY '<row>' - stored in line_term 
@@ -1685,7 +1704,7 @@ int READ_INFO::read_xml()
       
     case ' ': /* read attribute */
       while(chr == ' ')  /* skip blanks */
-        chr= GET;
+        chr= my_tospace(GET);
       
       if(!in_tag)
         break;
@@ -1693,7 +1712,7 @@ int READ_INFO::read_xml()
       while(chr != '=' && chr != '/' && chr != '>' && chr != my_b_EOF)
       {
         attribute.append(chr);
-        chr= GET;
+        chr= my_tospace(GET);
       }
       break;
       
@@ -1717,13 +1736,13 @@ int READ_INFO::read_xml()
       
     case '/': /* close tag */
       level--;
-      chr= GET;
+      chr= my_tospace(GET);
       if(chr != '>')   /* if this is an empty tag <tag   /> */
         tag.length(0); /* we should keep tag value          */
       while(chr != '>' && chr != my_b_EOF)
       {
         tag.append(chr);
-        chr= GET;
+        chr= my_tospace(GET);
       }
       
       if((tag.length() == line_term_length -2) &&
@@ -1733,7 +1752,7 @@ int READ_INFO::read_xml()
                                  level, tag.c_ptr_safe()));
          DBUG_RETURN(0); //normal return
       }
-      chr= GET;
+      chr= my_tospace(GET);
       break;   
       
     case '=': /* attribute name end - read the value */
@@ -1745,7 +1764,7 @@ int READ_INFO::read_xml()
           this is format <field name="xx">xx</field>
           where actual fieldname is in attribute
         */
-        delim= GET;
+        delim= my_tospace(GET);
         tag.length(0);
         attribute.length(0);
         chr= '<'; /* we pretend that it is a tag */
@@ -1779,11 +1798,11 @@ int READ_INFO::read_xml()
       attribute.length(0);
       value.length(0);
       if (chr != ' ')
-        chr= GET;
+        chr= my_tospace(GET);
       break;
     
     default:
-      chr= GET;  
+      chr= my_tospace(GET);
     } /* end switch */
   } /* end while */
   
